@@ -6,35 +6,87 @@ local Events = require("utility/events")
 
 function OrderAudit.CreateGlobals()
     global.Orders.orderAuditTable = global.Orders.orderAuditTable or {}
-    global.Orders.orderAuditMap = global.Orders.orderAuditMap or {}
 end
 
 function OrderAudit.OnLoad()
     SlotStates = global.StaticData.Orders.slotStates
     Commands.Register("wills_spaceship_repair-write_order_data", {"api-description.wills_spaceship_repair-write_order_data"}, OrderAudit.WriteOutTableCommand, false)
     Events.RegisterHandler("Orders.OrderSlotUpdated", "OrderAudit.LogOrder", OrderAudit.LogOrder)
+
+    Commands.Register("fixit", nil, OrderAudit.FixIt, false)
+end
+
+function OrderAudit.FixIt()
+    local currentOrderId = 0
+    for i, auditOrder in ipairs(global.Orders.orderAuditTable) do
+        if auditOrder.endedTime == "" then
+            global.Orders.orderAuditTable[i] = "bob"
+        else
+            currentOrderId = currentOrderId + 1
+            auditOrder.orderId = currentOrderId
+            auditOrder.auditIndex = nil
+        end
+    end
+
+    for i = 1, #global.Orders.orderAuditTable do
+        if global.Orders.orderAuditTable[i] ~= nil and global.Orders.orderAuditTable[i] == "bob" then
+            table.remove(global.Orders.orderAuditTable, i)
+        end
+    end
+    for i = 1, #global.Orders.orderAuditTable do
+        if global.Orders.orderAuditTable[i] ~= nil and global.Orders.orderAuditTable[i] == "bob" then
+            table.remove(global.Orders.orderAuditTable, i)
+        end
+    end
+
+    for orderSlotIndex, auditIndex in ipairs(global.Orders.orderAuditMap) do
+        local order = global.Orders.orderSlots[orderSlotIndex]
+        order.orderId = auditIndex
+    end
+
+    local newOrderAuditTable = {}
+    for _, auditOrder in ipairs(global.Orders.orderAuditTable) do
+        newOrderAuditTable[auditOrder.orderId] = {
+            orderId = auditOrder.orderId,
+            orderSlot = auditOrder.orderSlot,
+            item = auditOrder.item,
+            itemCountNeeded = auditOrder.itemCountNeeded,
+            itemCountDone = auditOrder.itemCountNeeded,
+            startTime = auditOrder.startTime,
+            endedTime = auditOrder.endedTime,
+            stateName = auditOrder.stateName
+        }
+    end
+    global.Orders.orderAuditTable = newOrderAuditTable
+
+    global.Orders.currentOrderId = currentOrderId
+    global.Orders.orderAuditMap = nil
 end
 
 function OrderAudit.LogOrder(event)
     local order = event.order
-    if order.stateName == SlotStates.waitingItem.name then
-        local auditIndex = #global.Orders.orderAuditTable + 1
-        global.Orders.orderAuditTable[auditIndex] = {
+    if order.orderId == nil then
+        return
+    end
+    if global.Orders.orderAuditTable[order.orderId] == nil then
+        global.Orders.orderAuditTable[order.orderId] = {
+            orderId = order.orderId,
             orderSlot = order.index,
-            auditIndex = auditIndex,
             item = order.item,
             itemCountNeeded = order.itemCountNeeded,
+            itemCountDone = 0,
             startTime = order.startTime,
             endedTime = "",
             stateName = order.stateName
         }
-        global.Orders.orderAuditMap[order.index] = auditIndex
+    elseif order.stateName == SlotStates.waitingItem.name then
+        local auditOrder = global.Orders.orderAuditTable[order.orderId]
+        auditOrder.itemCountDone = order.itemCountDone
     elseif order.stateName == SlotStates.orderFailed.name or order.stateName == SlotStates.waitingCustomerDepart.name then
-        local auditIndex = global.Orders.orderAuditMap[order.index]
-        local auditOrder = global.Orders.orderAuditTable[auditIndex]
+        local auditOrder = global.Orders.orderAuditTable[order.orderId]
+        auditOrder.itemCountDone = order.itemCountDone
         auditOrder.endedTime = order.startTime
         auditOrder.stateName = order.stateName
-        global.Orders.orderAuditMap[order.index] = nil
     end
 end
 
